# ReflectionSystem

./: CMakeLists.txt  README.md  for_each.h  logger.cpp  logger.h  main.cpp  reflection.cpp  reflection.h  reflection_system.h  reflection_system_test.cpp  serializer.h  tests.cpp  utils.h
docs/: reflection.md  reflection_system.md  serializer.md
